# AI-Agent-Testing

./: README.md  pyproject.toml
ollama-test/: testing.py
simple-agent/: main.py
